# KafkaTransferTool

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  settings.example.py
examples/: demo.sh  docker-compose.yml
kafka_file_transfer/: __init__.py  chunker.py  cli.py  config.py  logging_setup.py  protocol.py  receiver.py  sender.py  version.py
tests/: test_chunker.py  test_cli_config.py  test_config.py  test_protocol.py
